В композер добавлен "yiisoft/yii2-jui": "~2.0.0"; В config/web заменен identityClass на собственный Users; Добавлена миграция для фейкового пользователя Admin; В форме логирования заменил на свой класс Users; Класс Users унаследован на IdentityInterface; Добавлен Controller, унаследован от \yii\web\Controller, добавлен behavior; Добавлен CRUD и админка для всех контроллеров;

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "monolog/monolog": "^1.21"
+        "monolog/monolog": "^1.21",
+        "yiisoft/yii2-jui": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
